feat: criado arquivos de tokens, theme e GlobaStyles. Configurado os aquivos de tsconfig e viteconfig para realizar importaçõe mais simples com @. Finalizado o densenvolvimento da primeira dobra e ajustado para o mobile.

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,13 @@
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.d.tsx"],
+      "rules": {
+        "@typescript-eslint/no-empty-object-type": "off"
+      }
+    }
+  ]
 }
