fix: ajuste nos componentes de card. script do prettier acionado. instalado a lib de testes Jest

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --write \"src/**/*.{.js,jsx,ts,tsx,css,md}\""
   },
   "dependencies": {
-    "react": "^19.2.0",
+    "@types/jest": "^30.0.0",
+    "react": "^7.2.4",
     "react-dom": "^19.2.0",
     "styled-components": "^6.3.8"
   },
